more pos ui changes - added brand name, quantity, fixed cart ui dark mode light mode responsive changed sample product info, photos

--- a/kapitan-stone/public/assets/css/pos.css
+++ b/kapitan-stone/public/assets/css/pos.css
@@ -80,6 +80,72 @@
     padding-left: 56px; /* Adjust padding for button position */
     border: none; /* Remove the border */
   }
+  .product-card {
+    /* Tailwind CSS classes */
+    user-select: none;
+    cursor: pointer;
+    transition: box-shadow 0.3s ease;
+    overflow: hidden;
+    border-radius: 1rem;
+    background-color: white;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+.product-card:hover {
+    /* Tailwind CSS classes */
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.product-image{
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  
+
+}
+
+.product-brand{
+
+  font-weight: 600;
+  font-size:12px;
+
+}
+.product-name{
+  font-weight: 600;
+  white-space: nowrap;
+  font-size:12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px; /* Set your desired max-width */
+}
+
+.product-price-quantity {
+  display: block; /* Display as block-level elements */
+}
+
+
+.product-price{
+  font-weight: 600;
+}
+
+.product-price,
+.product-quantity {
+  font-size: 12px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%; /* Adjust the max-width accordingly */
+}
+
+.product-card-pad {
+  display: flex; /* Equivalent to flex */
+  padding-bottom: 8px; /* Equivalent to pb-3 */
+  padding-left: 0.75rem; /* Equivalent to px-3 */
+  padding-right: 0.75rem; /* Equivalent to px-3 */
+  font-size: 0.875rem; /* Equivalent to text-sm */
+  margin-top: -0.1875rem; /* Equivalent to -mt-3 */
+}
 
   .product-container {
     height: 100%; /* Adjust height as needed */
@@ -88,7 +154,7 @@
   }
   
   .product-inner-container {
-    height: 90%;
+    height: 100%;
     overflow-y: auto;
     padding: 0 0.5rem; /* Adjust padding as needed */
   }
@@ -107,10 +173,11 @@
 
   .products-product {
     display: grid; /* Equivalent to grid */
-    grid-template-columns: repeat(5, minmax(0, 1fr)); /* Equivalent to grid-cols-5 */
+    grid-template-columns: repeat(4, minmax(0, 1fr)); /* Equivalent to grid-cols-5 */
     gap: 1rem; /* Equivalent to gap-4 */
     padding-bottom: 0.75rem; /* Equivalent to pb-3 */
     /* Add any additional styles for products-product here */
+    
   }
 
   .db-info {
@@ -123,7 +190,36 @@
   .products.select-none {
     user-select: none; /* Prevent text selection */
   }
+
+
+  .search-card {
+    user-select: none; /* Equivalent to select-none */
+    color: var(--dark);
+    background-color: var(--light);  /* Equivalent to bg-blue-gray-100 */
+    border-radius: 1.125rem; /* Equivalent to rounded-3xl */
+    display: flex;
+    flex-wrap: wrap; /* Equivalent to flex-wrap */
+    align-content: center; /* Equivalent to content-center */
+    justify-content: center; /* Equivalent to justify-center */
+    height: 100%; /* Equivalent to h-full */
+     /* Equivalent to opacity-25 */
+  }
   
+  .cart-empty {
+    /* Tailwind CSS classes */
+    display: flex;
+    flex: 1;
+    width: 100%;
+    padding: 1rem;
+    user-select: none;
+    border-radius: 1.5rem; /* Equivalent to rounded-3xl */
+    flex-direction: column;
+    color: var(--dark);
+    background-color: var(--light);
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
 
   .checkout-card {
     width: 41.666667%; /* Equivalent to w-5/12 (5/12 = 41.666667%) */
@@ -159,12 +255,13 @@
   .cash-text {
     margin-bottom: 12px; 
     color: var(--dark); 
+    background-color: var(--grey);
     padding-left: 12px; 
     padding-top: 8px; 
     padding-bottom: 12px; 
     padding-right: 12px; 
     border-radius: 8px; 
-    background-color: var(--grey); 
+
   }
   
   .cash-text > .flex > .flex-grow {
@@ -248,9 +345,66 @@
   .add-money:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Equivalent to hover:shadow-lg */
   }
+
+
+  .change-card {
+    display: flex;
+    margin-bottom: 0.75rem; /* Adjust as needed */
+    font-size: 1.25rem; /* Adjust as needed */
+    font-weight: 600;
+    color: var(--dark); 
+    background-color: var(--grey); /* Example text color */
+    border-radius: 1rem; /* Example border radius */
+    padding: 0.5rem 1rem; /* Example padding */
+  }
   
+  /* Styling for the Change Text */
+  .change-text {
+    color: var(--dark); /* Example text color */
+    font-weight: 700;
+  }
+
+  .change-text1 {
+    color: var(--dark); /* Example text color */
+    font-weight: 700;
+    text-align: right;
+    flex-grow: 1;
+  }
   
+  .submit-button {
+    color: var(--dark); 
+    background-color: var(--grey);
+    border-radius: 2rem; /* Example border radius */
+    font-size: 1.25rem; /* Example font size */
+    width: 100%; /* Takes the full width */
+    padding: 0.75rem 1.5rem; /* Example padding */
+    outline: none; /* Removes outline */
+  }
+  
+  /* Styling for the submitable state */
+  .submit-button.bg-cyan-500:hover,
+  .submit-button.bg-cyan-600 {
+    /* Styles when the button is in a submitable state */
+    background-color: #1d3133; /* Example background color */
+  }
+  
+  /* Styling for the non-submitable state */
+  .submit-button.bg-blue-gray-200 {
+    /* Styles when the button is not submitable */
+    background-color: #14437c; /* Example background color */
+  }
+  .submit{
+    color: var(--dark); 
+    background-color: var(--grey); 
+
+  }
  
+  .nosubmit{
+    color: var(--light); 
+    background-color: var(--grey);
+    opacity: 0.50; 
+
+  }
 
 
 
